--- a/docker/rproxy/httpd.conf
+++ b/docker/rproxy/httpd.conf
@@ -49,7 +49,7 @@ ServerRoot "/usr/local/apache2"
 # prevent Apache from glomming onto all bound IP addresses.
 #
 #Listen 12.34.56.78:80
-#Listen 80 # comment out so that you can only access using https
+Listen 443
 
 #
 # Dynamic Shared Object (DSO) Support
@@ -547,26 +547,19 @@ Include conf/extra/proxy-html.conf
 <IfModule ssl_module>
 SSLRandomSeed startup builtin
 SSLRandomSeed connect builtin
+SSLCertificateFile "/usr/local/apache2/conf/server.crt"
+SSLCertificateKeyFile "/usr/local/apache2/conf/server.key"
 </IfModule>
 
-# This is port 8443 on the docker network
-Listen 8443
-<VirtualHost *:8443>
-	ServerName crazycalculatorz
-	# Enables SSL
-	SSLEngine On
-	SSLCertificateFile /usr/local/apache2/conf/server.crt
-	SSLCertificateKeyFile /usr/local/apache2/conf/server.key
-	ProxyRequests Off
-	ProxyPreserveHost On
-	<Proxy *>
-		AddDefaultCharset Off
-		Order deny,allow
-		Allow from all
-	</Proxy>
-	ProxyPass / http://10.0.1.5/
-	ProxyPassReverse / http://10.0.1.5/
 
-	ErrorLog logs/myserver-error_log
-	CustomLog logs/myserver-access_log common
+#ProxyPass "/" "http://172.16.1.2/"
+ProxyPassReverse "/" "http://172.16.1.2/"
+
+<VirtualHost *:443>
+   ServerName www.crazycalculatorz.com
+   DocumentRoot "/usr/local/apache2/htdocs"
+   SSLEngine on
+   SSLCertificateFile "/usr/local/apache2/conf/server.crt"
+   SSLCertificateKeyFile "/usr/local/apache2/conf/server.key"
 </VirtualHost>
+
