--- a/docker/rproxy/httpd.conf
+++ b/docker/rproxy/httpd.conf
@@ -549,27 +549,19 @@ SSLRandomSeed startup builtin
 SSLRandomSeed connect builtin
 </IfModule>
 
-# Listen on port 80 for incoming HTTP connections and redirect them to HTTPS
-Listen 80
-<VirtualHost *:80>
-    ServerName www.crazycalculatorz.com
-    Redirect permanent / https://www.crazycalculatorz.com/
-</VirtualHost>
 
-# Listen on port 8443 for incoming HTTPS connections within the Docker network
 Listen 8443
 <VirtualHost *:8443>
-    ServerName www.crazycalculatorz.com
-    # SSL Configuration
+    ServerName crazycalculatorz
     SSLEngine on
     SSLCertificateFile /usr/local/apache2/conf/server.crt
     SSLCertificateKeyFile /usr/local/apache2/conf/server.key
-    
-    # Proxy Configuration
     ProxyRequests Off
     ProxyPreserveHost On
     <Proxy *>
-        Require all granted
+        AddDefaultCharset Off
+        Order deny,allow
+        Allow from all
     </Proxy>
 
     ProxyPass / http://172.16.1.2/
