--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -17,6 +17,16 @@ services:
         proxynet:
           ipv4_address: 172.16.1.3
 
+  crs-apache:
+    image: owasp/modsecurity-crs:apache    
+    ports:
+      - "8080:80"
+    environment:
+      - PROXY_SSL=on
+      - BACKEND=http://172.16.1.2
+    networks:
+      proxynet:
+        ipv4_address: 172.16.1.4
 
 networks:
   proxynet:
